--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,7 @@
-<div>Click on the button below.</div>
+<!-- <div>Click on the button below.</div>
 <app-tap-counter></app-tap-counter>
 <app-tap-counter></app-tap-counter>
 <app-tap-counter></app-tap-counter>
-<app-tap-counter></app-tap-counter>
+<app-tap-counter></app-tap-counter> -->
+
+<app-dealer-inventory></app-dealer-inventory>
