Lab 7 - added Cancel button

--- a/src/app/dealer-inventory/dealer-inventory.component.html
+++ b/src/app/dealer-inventory/dealer-inventory.component.html
@@ -16,7 +16,9 @@
 <app-vehicle-form
 *ngIf="vehicleToEdit == car"
 [vehicle]="car"
-(on-submit)="commitEdit($event)">
+(on-submit)="commitEdit($event)"
+(on-cancel)="commitEdit()"
+>
 </app-vehicle-form>
 <p>
     <button (click)="deleteVehicle(car)">Delete</button>
