Lab 11 - Added pipe and french locale

--- a/src/app/dealer-inventory/dealer-inventory.component.html
+++ b/src/app/dealer-inventory/dealer-inventory.component.html
@@ -12,7 +12,8 @@
 </p>
 <p *ngIf="car.featured">Featured car of the month!</p>
 <p>VIN: {{car.VIN}}</p>
-<p>{{car.mileage}} Miles, ${{car.price}}</p>
+<p>{{car.mileage | number:'':'fr-CA'}} Miles, {{car.price |
+    currency:'CAD':'symbol':'':'fr-CA'}}</p>
 <app-vehicle-form-reactive
 *ngIf="vehicleToEdit == car"
 [vehicle]="car"
